Membuat whitebox test

--- a/.env.testing
+++ b/.env.testing
@@ -1,6 +1,6 @@
-APP_NAME=BUKUBOOK
-APP_ENV=testing
-APP_KEY=base64:y3tHQsOFunOw7UQDYbeXBcuL97ZkL3rOoGzS64MopoA=
+APP_NAME=Laravel
+APP_ENV=local
+APP_KEY=base64:pTjsA5Ru04fIPuUcXp4YNOjk1beWRLbdHiuDXCl9Vh0=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -10,10 +10,10 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=bukubook-testing
+DB_PORT=3307
+DB_DATABASE=stf_bukubook
 DB_USERNAME=root
-DB_PASSWORD=password
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
