--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -24,6 +24,10 @@ jobs:
       run: php artisan key:generate
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
+    - name: npm build
+      run: |
+        npm install
+        npm run build
     - name: Create Database
       run: |
         mkdir -p database
